# insider-finder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
insider_finder/: __init__.py  cli.py  company_lookup.py  display.py  parser.py  sec_client.py  utils.py
tests/: test_cli.py  test_company_lookup.py  test_parser.py  test_sec_client.py
tests/fixtures/: form4_purchase_sale.xml
