[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insider-finder"
version = "0.1.0"
description = "A small CLI for finding the most recent reported insider transaction from SEC EDGAR filings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Insider Finder Contributors" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "requests>=2.31",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
insider-finder = "insider_finder.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
